# LeNetPaperEfficiently

./: .gitignore  CMakeLists.txt  README.md
internal/: jsonModel.hpp  loadjson.hpp  loadpt.hpp
lib/: helper.hpp
libtorch/: build-hash  build-version
libtorch/include/ATen/: CPUFunctions_inl.h  CUDAFunctions_inl.h  CompositeExplicitAutogradFunctions_inl.h  CompositeExplicitAutogradNonFunctionalFunctions_inl.h  Context.h  DeviceAccelerator.h  Dispatch.h  FunctionalStorageImpl.h  FunctionalTensorWrapper.h  FunctionalizeFallbackKernel.h  Functions.h  MetaFunctions_inl.h  MethodOperators.h  NativeFunctions.h  NativeMetaFunctions.h  OpMathType.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h  SparseCsrTensorUtils.h  TensorIndexing.h  VmapGeneratedPlumbing.h
libtorch/include/ATen/core/: CachingHostAllocator.h  TensorBody.h  aten_interned_strings.h  operator_name.h
libtorch/include/ATen/cuda/: CUDAContextLight.h  CUDADataType.h  CUDAGeneratorImpl.h  CUDAGraph.h  jiterator_impl.h
libtorch/include/ATen/functorch/: BatchedTensorImpl.h
libtorch/include/ATen/mps/: MPSAllocator.h  MPSDevice.h
libtorch/include/ATen/native/: DistributionTemplates.h  (+5 more)
libtorch/include/kineto/: ActivityProfilerInterface.h  ActivityType.h  Config.h  GenericTraceActivity.h  ILoggerObserver.h  ITraceActivity.h
libtorch/include/torch/: library.h
notebooks/: LeNet5.ipynb
notebooks/.ipynb_checkpoints/: LeNet5-checkpoint.ipynb
notebooks/models/: lenet5-architecture.txt  lenet5-v1.json  lenet5-v1.pt  lenet5-v2.pt
src/: jsonModel.cpp  loadjson.cpp  loadpt.cpp  main.cpp
(+114 files in other folders)
